--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sbs-prolink",
   "productName": "SBS Prolink",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "SBS Tournament Software",
   "main": "main.js",
   "scripts": {
@@ -33,8 +33,7 @@
         "repo": "sbs-prolink",
         "private": false,
         "publishAutoUpdate": true,
-        "releaseType": "release",
-        "token": "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"
+        "releaseType": "release"
       },
       "certificateFile": "mypfx.pfx",
       "certificatePassword": "password"
